infrastructure/eks-cluster/3-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name        = "${local.env}-igw"
    Terraform   = "true"
    Environment = local.env
  }
}
